--- a/tui/pyproject.toml
+++ b/tui/pyproject.toml
@@ -10,3 +10,10 @@ dependencies = [
 
 [project.scripts]
 akin = "main:main"
+
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+py-modules = ["main", "app", "client", "widgets"]
