--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
     "akinator",
-    "cloudscraper",
+    "curl-cffi",
     "fastapi",
     "uvicorn[standard]",
 ]
