--- a/.gitignore
+++ b/.gitignore
@@ -92,4 +92,9 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/pycharm+all
 
 # explicit ignore
-.ignore
+/.ignore
+
+# Python build artifacts
+*.egg-info/
+__pycache__/
+*.py[cod]
