address code review notes

--- a/engine/Dockerfile
+++ b/engine/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.12-slim
+FROM python:3.12.12-slim
 
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
+COPY --from=ghcr.io/astral-sh/uv:0.10.7 /uv /usr/local/bin/uv
 
 RUN addgroup --system --gid 1001 appgroup \
  && adduser --system --uid 1001 --gid 1001 appuser
@@ -9,7 +9,7 @@ WORKDIR /app
 
 COPY pyproject.toml uv.lock .
 RUN uv sync --no-dev --frozen
-
+j
 COPY . .
 RUN chown -R appuser:appgroup /app
 
